--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,9 +10,9 @@ Hello Genius
         padding-top: 60px;
       }
     </style>
-	
+
 	<script type="text/javascript" src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"></script><link type="text/css" rel="stylesheet" href="chrome-extension://ejmdppmmnogaandoecmdhkbcgolhfefd/off.css" media="screen" id="upsideDownCSS"><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script></head>
-	
+
 <body style="background-attachment: scroll; " id="">
 
 
@@ -20,8 +20,8 @@ Hello Genius
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Sup, team! Orchive says bye!</h1>
-        <p>This app currently represents the progress of our back-end work. We have yet to integrate any of our intended designs, and this site by no means is what the final product will appear as.</p>
+        <h1>Hola!</h1>
+        <p>Amigo.</p>
         <p><a class="btn primary large">Learn more »</a></p>
       </div>
 
@@ -50,7 +50,7 @@ Hello Genius
 
     </div> <!-- /container -->
 
-  
+
 
 <div id="tc_container" style="display: none" data="ih"></div>
 <%= javascript_include_tag "vglnk" %>
