--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,26 @@
-<footer>
-  <nav class="round">
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-<li><%= link_to "Testimonials", testimonials_path %></li>
-	 <li><%= link_to "The Team", team_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-<li><%= link_to "Blog", 'http://blog.orchive.com/' %></li>
-<li><%= link_to "Developers", developers_path %></li>
+  <div id="body-wrapper" class="clearfix"><!--start body-wrapper-->
 
-	<li><%= link_to "Privacy Policy", privacy_path %></li>
-	<li><%= link_to "Terms of Agreement", terms_path %></li>
-    </ul>
-  </nav>
-</footer>
+  <div id="footer-main"><!--start footer-main-->
+    <div class="one_fourth">
+      <h3>Footer 1</h3>
+      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+    </div>
+    <div class="one_fourth">
+      <h3>Footer 2</h3>
+      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+    </div>
+    <div class="one_fourth">
+      <h3>Footer 3</h3>
+      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+    </div>    
+    <div class="one_fourth column-last">
+      <h3>Footer 4</h3>
+      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+    </div>
+  </div><!--end footer-main-->
+
+  <div id="footer">
+    <p id="footer-text">&copy; Copyright 2012 Tussify
+  </div>
+
+  </div>
