--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header>
+<!--<header>
 <div class="topbar">
       <div class="fill">
         <div class="container">
@@ -29,4 +29,33 @@
   </div>
   </div>
   </div>
-</header>
+</header>-->
+
+<div class="header">
+  <%= link_to(image_tag('logo.png', :alt=>'Tussify', :id=>'logo'), root_path) %>
+
+  <ul id="menu" class="menu">
+  <% if signed_in? %>
+  <li><%=link_to "Sign Out", "/signout" %></li>
+  <li><%= link_to "Command Center", "/command" %></li>
+  <li><%= link_to "Users", users_path %></li>
+  <li><%= link_to "Profile", current_user %></li>
+  <li><%= link_to "Home", root_path %></li>
+        
+        
+        
+        
+        
+
+        <% else %>
+  <li><%= link_to "Sign in", signin_path%></li>
+      <li><%= link_to "Sign up", signup_path%></li>
+    <li><%= link_to "Contact", "/contact" %></li>
+    <li><%= link_to "About", "/about" %></li>
+    <li><%= link_to "Home", root_path %></li>
+    <% end %>
+
+  </ul>
+</div>
+
+<br><br>
