--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<%= stylesheet_link_tag "bootstrap" %>
+
+<div id="body-wrapper" class="clearfix"><!--start body-wrapper-->
+
 <h1>Sign up</h1>
 
 <%= form_for(@user) do |f| %>
@@ -7,3 +11,5 @@
     <%= f.submit "Sign up" ,:class => "btn info" %>
   </div>  
 <% end %>
+
+</div>
