--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@ body,input,textarea {
 font:12px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
 background:#FFF;
 color:#000;
-
+}
 
 .clear {clear: both}
 
@@ -106,7 +106,6 @@ a {
 
 a:hover {
 	color: #F34B47;
-	border-color: #;
 	}
 
 p{
@@ -172,7 +171,6 @@ font-size: 16px;
 
 .menu a:hover {
 	color: #F34B47;
-	border-color: #;
 }
 
 #footer-main {
