--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@ Hello Genius
   <script>
     !window.jQuery && document.write('<script src="js/jquery-1.4.3.min.js"><\/script>');
   </script>
-  <%= javascript_include_tag "jquery-fancybox-1.3.4.pack" %>
+  <%= javascript_include_tag "jquery.fancybox-1.3.4.pack" %>
   <%= stylesheet_link_tag "jquery.fancybox-1.3.4" %>
   
   <script type="text/javascript">
