--- a/app/views/layouts/page_home.html.erb
+++ b/app/views/layouts/page_home.html.erb
@@ -10,6 +10,7 @@
     <!--Nivo Slider-->
     <%= stylesheet_link_tag "default" %>
     <%= stylesheet_link_tag "nivo-slider" %>
+    <%= javascript_includ_tag "jquery.nivo.slider.pack" %>
     <!--Nivo Slider-->
 
 <!--FANCY BOX-->
