--- a/app/views/layouts/page_home.html.erb
+++ b/app/views/layouts/page_home.html.erb
@@ -10,7 +10,7 @@
     <!--Nivo Slider-->
     <%= stylesheet_link_tag "default" %>
     <%= stylesheet_link_tag "nivo-slider" %>
-    <%= javascript_include_tag "jquery.nivo.slider.pack" %>
+    <%#<%= javascript_include_tag "jquery.nivo.slider.pack" %>%>
     <!--Nivo Slider-->
 
 <!--FANCY BOX-->
@@ -18,7 +18,7 @@
   <script>
     !window.jQuery && document.write('<script src="js/jquery-1.4.3.min.js"><\/script>');
   </script>
-  <%= javascript_include_tag "jquery.fancybox-1.3.4.pack" %>
+  <%#<%= javascript_include_tag "jquery.fancybox-1.3.4.pack" %>%>
   
   <script type="text/javascript">
     $(document).ready(function() {
