--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,4 @@
 <h1>About Us</h1>
 <p>
-Orchive is a sick app.
-
-Developed by the most badass kids on the block.
+Tussify is great! Learn more when Jon and Chuki actually write up about it.
 </p>
