--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,6 +40,7 @@
   <li><%= link_to "Command Center", "/command" %></li>
   <li><%= link_to "Users", users_path %></li>
   <li><%= link_to "Profile", current_user %></li>
+  <li><%= link_to "Quiz", "quiz/index" %></li>
   <li><%= link_to "Home", root_path %></li>
         
         
