--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -203,3 +203,24 @@ color:white;
 #footer-text {
 padding-left:20px; 
 }
+
+.submit {font-size:1.2em; padding:5px 10px; width:150px; margin-top:10px;}
+#question {font-size:1.2em;}
+
+#count {font-size: 1.2em;}
+
+#score {font-size: 2em; text-align: center; font-weight: bold;}
+
+/* question (/quiz/question) page */
+.choice {font-size: 1.2em; margin: 0; border-radius: 4px;}
+.choice:hover {background-color: #ffdb73;}
+.choice label {width: 400px; display: inline-block; padding: 10px 0 10px 0; margin: 0;}
+
+/* feedback (/quiz/answer) page */
+.correct {background-color: #64de89;}
+.incorrect {background-color: #ff8373;}
+.feedback {font-weight: bold; font-size: 1.2em; }
+.feedback-choice {margin: 0 0 5px 0; font-size: 1.2em; padding: 10px 5px 10px 25px; border-radius: 4px;}
+
+
+table {border-collapse: collapse;}
