--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 <h1>About Us</h1>
 <p>
-Tussify is great! Learn more when Jon and Chuki actually write up about it.
+Tussify is a revolutionary site where students can practice and compete over standardized test problems.  The goal of Tussify is to spread knowledge through competition. Enjoy!
 </p>
