changed about page- just wanted to test this small change out

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 <h1>About Us</h1>
 <p>
-Tussify is great! Learn more when Jon and Chuki actually write up about it.
+Tussify is a revolutionary app developed to aid students for standardized test preparation.  Students may practice and compete with their friends over practice problems.  The goal is to spread knowledge through competition.  Enjoy Tussify!
 </p>
