--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@ Hello Genius
 
   <div class="one_fourth"><!--start top half content-->
     <h3>Secondary awesome title required also!</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum massa eu nisi lacinia quis. <a href="#">link</a></p>
+    <p>Create a profile! <a href="#">link</a></p>
   </div>
   <div class="one_fourth">
     <div class="fancy"><%=image_tag('210-150-1.png')%></div>
@@ -32,19 +32,19 @@ Hello Genius
 
   <div class="one_fourth">
     <h3>One</h3>
-    <p>Donec metus leo, elementum at ultrices ac, dapibus at justo. Donec tristique hendrerit dui vitae lacinia. Suspendisse ante ligula, adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus ac, fermentum vitae felis.</p>
+    <p>Practice Problems!</p>
   </div>
   <div class="one_fourth">
     <h3>Two</h3>
-    <p>Donec metus leo, elementum at ultrices ac, dapibus at justo. Donec tristique hendrerit dui vitae lacinia. Suspendisse ante ligula, adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus ac, fermentum vitae felis.</p>
+    <p>Compete against Friends!</p>
   </div>
   <div class="one_fourth">
     <h3>Three</h3>
-    <p>Donec metus leo, elementum at ultrices ac, dapibus at justo. Donec tristique hendrerit dui vitae lacinia. Suspendisse ante ligula, adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus ac, fermentum vitae felis.</p>
+    <p>Tussify is in its development stage.</p>
   </div>
   <div class="one_fourth column-last">
     <h3>Four</h3>
-    <p>Donec metus leo, elementum at ultrices ac, dapibus at justo. Donec tristique hendrerit dui vitae lacinia. Suspendisse ante ligula, adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus ac, fermentum vitae felis.</p>
+    <p>Enjoy!</p>
   </div>
     
     <div class="clear"></div>
