small html changes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>About Us</h1>
 <p>
 Tussify is a revolutionary app developed to aid students for standardized test preparation.  Students may practice and compete with their friends over practice problems.  The goal is to spread knowledge through competition.  Enjoy Tussify!
-Updates are being applied to Tussify.
+Updates are being applied to Tussify!
 </p>
