--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@ Hello Genius
 
   <div class="one_fourth">
     <h3>One</h3>
-    <p>Practice Problems!</p>
+    <p>Practice Problems!!</p>
   </div>
   <div class="one_fourth">
     <h3>Two</h3>
