--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
 <h1>Contact</h1>
 <p>
-Students attending The Lawrenceville School near Princeton N.J.
+Students attending The Lawrenceville School near Princeton.
 </p>
