small html changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@ Hello Genius
     </div>
 
   <div class="one_fourth"><!--start top half content-->
-    <h3>Secondary awesome title required also!</h3>
+    <h3>Become a Tussifier! Compete against the best in the world!</h3>
     <p>Create a profile! <a href="#">link</a></p>
   </div>
   <div class="one_fourth">
