--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,20 +2,20 @@
 
   <div id="footer-main"><!--start footer-main-->
     <div class="one_fourth">
-      <h3>Footer 1</h3>
-      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+      <h3></h3>
+      <p>Knowledge through Competition</p>
     </div>
     <div class="one_fourth">
-      <h3>Footer 2</h3>
-      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+      <h3></h3>
+      <p>A Lawrenceville School Production</p>
     </div>
     <div class="one_fourth">
-      <h3>Footer 3</h3>
-      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+      <h3></h3>
+      <p>&#9786;</p>
     </div>    
     <div class="one_fourth column-last">
-      <h3>Footer 4</h3>
-      <p>Suspendisse ante ligula, del adipiscing porta aliquam et, rutrum nec lectus. Nulla erat risus, molestie non dapibus.</p>
+      <h3></h3>
+      <p>Enjoy!!!</p>
     </div>
   </div><!--end footer-main-->
 
