--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,19 @@
   <div id="body-wrapper" class="clearfix"><!--start body-wrapper-->
 
   <div id="footer-main"><!--start footer-main-->
-    <div class="one_fourth">
+    <div class="one_half">
       <h3></h3>
-      <p>Knowledge through Competition</p>
+      <p>Knowledge through Competition.  The site was developed to aid students for standardized test preparation and to spread more knowledge.</p>
     </div>
-    <div class="one_fourth">
+    <div class="one_half">
       <h3></h3>
       <p>A Lawrenceville School Production</p>
     </div>
-    <div class="one_fourth">
+    <div class="one_half">
       <h3></h3>
       <p>&#9786;</p>
     </div>    
-    <div class="one_fourth column-last">
+    <div class="one_half column-last">
       <h3></h3>
       <p>Enjoy!!!</p>
     </div>
