finalized cumulative scoring

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
       <h1>
         <%= gravatar_for @userProfile %>
         <%= @userProfile.name %>
+        <p>Your Overall Score is <%= @average %> %</p>
       </h1>
 
 </table>
