--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
       <h1>
         <%= gravatar_for @userProfile %>
         <%= @userProfile.name %>
-        <p>Rating: <%= 0 + @average %> %</p>
+        <p>Rating: <%=@average %> %</p>
       </h1>
 
 </table>
