--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,34 @@
         <% if user_signed_in? %>
         <p>Rating: <%=@average %> %</p>
         <% end %>
+
+        <style>
+
+        #contain {
+        width:200px;
+        margin:none;
+        }
+
+        #backbar {
+        background:gray;
+        height:25px;
+        width:100%;
+        }
+
+        #bar {
+        background:red;
+        height:25px;
+        width: <%= @average %>%;
+        }
+
+        </style>
+        <div id="contain">
+        <div id='backbar'>
+        <div id = 'bar'>
+        </div>
+        </div>
+        </div>
+        
       </h1>
 
 </table>
-
