--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,37 @@
-<h1>About Us</h1>
-<p>
-Tussify is a revolutionary app developed to aid students for standardized test preparation.  Students may practice and compete with their friends over practice problems.  The goal is to spread knowledge through competition.  Enjoy Tussify!
-Updates are being applied to Tussify!!
-</p>
+<div id="main_wrap">
+	<div id="main">
+    
+		<div class="col_1_3">
+            <h2 class="title">About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque posuere sapien eu purus ultricies quis hendrerit libero accumsan. Donec id molestie ante. Duis non erat nec urna feugiat lobortis. Pellentesque quis urna nec sapien ullamcorper molestie.</p> 
+            <h4>Sed tempus</h4>          		
+            <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget quam turpis. </p>
+			<p>Pellentesque habitant morbi malesuada fames ac turpis egestas.</p>	
+        </div> 
+        
+         
+  		<div class="col_2_3_last">
+        	<ul class="team">
+            	<li>
+                    <h5>Francis J. Hinson</h5>
+                    <img src="images/photos/image_01_thumb.jpg" alt="Dave"/>
+                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci.</p>
+            	</li>
+            	<li class="last">
+                    <h5>Nick Cherukuri</h5>
+                    <img src="images/photos/image_04_thumb.jpg" alt="Suzan"/>
+                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci.</p>
+            	</li>   
+             	<li>
+                    <h5>Jonathan Zhao</h5>
+                    <img src="images/photos/image_05_thumb.jpg" alt="Steve"/>
+                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci. </p>
+            	</li>
+            	<li class="last">
+                    <h5>Miguel Bayona</h5>
+                    <img src="images/photos/image_06_thumb.jpg" alt="Monica"/>
+                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci. </p>
+            	</li>                                
+            </ul>         
+        </div> 
+        
