--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,26 +1,18 @@
-  <div id="body-wrapper" class="clearfix"><!--start body-wrapper-->
-
-  <div id="footer-main"><!--start footer-main-->
-    <div class="one_half">
-      <h3></h3>
-      <p>Knowledge through Competition.  The site was developed to aid students for standardized test preparation and to spread more knowledge.</p>
-    </div>
-    <div class="one_half">
-      <h3></h3>
-      <p>A Lawrenceville School Production</p>
-    </div>
-    <div class="one_half">
-      <h3></h3>
-      <p>&#9786;</p>
-    </div>    
-    <div class="one_half column-last">
-      <h3></h3>
-      <p>Enjoy!!!</p>
-    </div>
-  </div><!--end footer-main-->
-
+<div id="footer_wrap">
   <div id="footer">
-    <p id="footer-text">&copy; Copyright 2012 Tussify
-  </div>
-
-  </div>
+        
+       <div class="col_3">
+            <ul id="footer_links">
+                <li></li>
+            </ul>
+      
+       </div>
+       
+       <div class="col_1_last">
+           <a class="footer_logo" href="index.html"><%=image_tag('logo_small.png')%></a> 
+           <div class="clear"></div>      
+           <p class="copyright">Copyright 2012 Tussify</p>
+       </div>
+       
+    </div> <!--end footer-->
+</div> <!--end footer_wrap-->
