--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,35 +1,4 @@
-<!--<header>
-<div class="topbar">
-      <div class="fill">
-        <div class="container">
-    <ul>
-     
-      <% if signed_in? %>
- 				<li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Profile", current_user %></li>
-        <li><%= link_to "Users", users_path %></li>
-        <li><%= link_to "Command Center", "/command" %></li>
-      <% end %>
-      <li><%= link_to "Help", help_path %></li>
-      <% if signed_in? %>
-
-        <li><%=link_to "Sign Out", "/signout" %></li>
-<form class="pull-left" action="">
-            <input type="text" placeholder="Search" />
-          </form>
-      <% else %>
- <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Sign in", signin_path %></li>
-
-
-      <% end %>
-
-    </ul>
-  </nav>
-  </div>
-  </div>
-  </div>
-</header>-->
+<!--
 
 <div class="header">
   <%= link_to(image_tag('logo.png', :alt=>'Tussify', :id=>'logo'), root_path) %>
@@ -59,4 +28,82 @@
   </ul>
 </div>
 
-<br><br>
+<br><br> -->
+
+<div id="nav_wrap">
+    <div id="nav">
+  
+        <a id="logo" href="index.html">Tussify</a>
+    
+        <div id="main_nav">
+      <ul>
+        <% if signed_in? %>
+        
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Quiz", "quiz/index" %></li>
+        <li><%= link_to "Profile", current_user %></li>
+        <li><%= link_to "Friends", users_path %></li>
+        <li><%= link_to "Command Center", "/command" %></li>
+        <li><%=link_to "Sign Out", "/signout" %></li>
+         <% else %>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", "/about" %></li>
+        <li><%= link_to "How it Works", "/howitworks" %></li>
+        <li><%= link_to "Contact", "/contact" %></li>
+        <li><%= link_to "Sign up", signup_path%></li>
+        <li><%= link_to "Sign in", signin_path%></li>
+        <% end %>
+      </ul>
+        </div> <!--end main_nav-->
+    
+    </div> <!--end nav-->
+</div> <!--end nav_wrap-->
+
+<div id="header_wrap">
+  <div id="header_subpage">
+
+    <div id="header_msg">
+      
+       <% if signed_in? %>
+      <p class="header_p">Your Rating: <%=@average %> %</p>
+        
+
+        <style>
+
+        #contain {
+        width:200px;
+        margin:none;
+        position:relative;
+        left:200px;
+        margin-top:-67px;
+        }
+
+        #backbar {
+        background:gray;
+        height:25px;
+        width:100%;
+        }
+
+        #bar {
+        background:green;
+        height:25px;
+        width: <%= @average %>%;
+        }
+
+        </style>
+        <div id="contain">
+        <div id='backbar'>
+        <div id = 'bar'>
+        </div>
+        </div>
+        </div>
+
+        
+
+        <% else %>
+        <p class="header_p">Knowledge through competition.</p>  
+        <% end %>        
+    </div>
+
+  </div> <!--end header-->
+</div> <!--end header_wrap-->
