--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,67 @@
-<h1>Contact</h1>
-<p>
-Students attending The Lawrenceville School near Princeton.
-</p>
+<head>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+  function initialize() {
+    var myLatlng = new google.maps.LatLng(-37.812537,144.969041);
+    var myOptions = {
+      zoom: 17,
+      center: myLatlng,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    }
+    var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+    
+    var marker = new google.maps.Marker({
+        position: myLatlng, 
+        map: map,
+    });   
+  }
+</script>
+</head>
+
+
+<div id="main_wrap">
+	<div id="main">
+	
+		<div class="col_2">
+
+            <form id="form" method="post" action="http://www.daba.in.rs/tf/elements/air/sendEmail.php">
+				<div id="contact_container">
+
+					<div id="contact">
+					
+						<p><span>Name:</span><input type="text" name="name" id="name" /></p>
+						<p><span>Email Address:</span><input type="text" name="email" id="email" /></p>
+						<p><span>Subject:</span><input type="text" name="subject" id="subject" /></p>
+						<p><span>Message:</span><textarea name="message" id="message" rows="12" cols="30"></textarea></p>	
+						<p id="submit_button"><input type="submit" name="submit" id="submit" value="Submit!" /></p>
+
+					</div><!--end contact -->
+				</div><!-- end contact_container -->
+			</form> <!-- end form -->
+            
+			<div id="preloader"></div>           
+			<ul id="response"><li></li></ul>
+			
+		</div> 
+		
+		<div class="col_2_last">
+	
+			<h4>Contact Details</h4>
+			<p>Address: State, City, Street and Number</p>
+			<p>Phone: 9999-111-555</p>
+			<p>Fax: 9999-111-555</p>
+			<p>Email: <a href="mailto:companyname@domain.com">companyname@domain.com</a></p>
+			<p>Skype: Skype name</p>
+			<p>Twitter: Twitter name</p>
+			
+            <div class="space"></div>
+           
+          	<div id="map_canvas"></div> <!--google maps-->
+            
+		</div>
+		
+	</div> <!--end main-->
+</div> <!--end main_wrap-->
+
+
+</body>
