--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,11 +3,13 @@
     
 		<div class="col_1_3">
             <h2 class="title">About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque posuere sapien eu purus ultricies quis hendrerit libero accumsan. Donec id molestie ante. Duis non erat nec urna feugiat lobortis. Pellentesque quis urna nec sapien ullamcorper molestie.</p> 
-            <h4>Sed tempus</h4>          		
-            <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget quam turpis. </p>
-			<p>Pellentesque habitant morbi malesuada fames ac turpis egestas.</p>	
-        </div> 
+            <p>Tussify is a revolutionary app developed to aid students for standardized test
+preparation. Students may practice and compete with their friends over problems. The
+goal is to spread knowledge through competition. Improve your ranking by doing well
+on quizzes. Every single question has been designed to stimulate your mind and is
+guaranteed to improve your test-taking skills.</p> 
+                     		
+          
         
          
   		<div class="col_2_3_last">
@@ -15,22 +17,30 @@
             	<li>
                     <h5>Francis J. Hinson</h5>
                     <img src="images/photos/image_01_thumb.jpg" alt="Dave"/>
-                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci.</p>
+                    <p>Francis, a Princeton native, is also a student at Lawrenceville. He has
+nurtured his interest in web development through multiple projects, the first one originating in 2011.
+He plans on continuing his study of computer programming in college.</p>
             	</li>
             	<li class="last">
                     <h5>Nick Cherukuri</h5>
                     <img src="images/photos/image_04_thumb.jpg" alt="Suzan"/>
-                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci.</p>
+                    <p>Nick attends Lawrenceville as a day student from Cranbury, NJ. He enjoys
+studying business and politics. Nick is also an avid golf player with his favorite player being
+Tiger Woods. Nick hopes to expand to the mobile app market.</p>
             	</li>   
              	<li>
                     <h5>Jonathan Zhao</h5>
                     <img src="images/photos/image_05_thumb.jpg" alt="Steve"/>
-                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci. </p>
+                    <p>Jon is 17 years old and from West Windsor, New Jersey. He has a wide range of
+interests including classical music (Mozart & Bach), debate, international economics (specifically, the inner workings and power struggles of Communist China), and golf. He has attended
+The Lawrenceville School for the past 4 years where he met Francis and Nick. </p>
             	</li>
             	<li class="last">
                     <h5>Miguel Bayona</h5>
                     <img src="images/photos/image_06_thumb.jpg" alt="Monica"/>
-                    <p>Sed tempus auctor nunc, vitae euismod orci adipiscing id. Phasellus vitae nibh orci. </p>
+                    <p>Mr. Bayona is a long time mathematics master at Lawrenceville. He is
+a veteran programmer and developer with multiple apps under his belt. He currently teacher Physics,
+Calculus, and Algebra.</p>
             	</li>                                
             </ul>         
         </div> 
