--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -46,13 +46,13 @@
 		
 		<div class="col_2_last">
 	
-			<h4>Contact Details</h4>
-			<p>Address: State, City, Street and Number</p>
-			<p>Phone: 9999-111-555</p>
+			<h4></h4>
+			<p></p>
+			<p>Phone: 1800-111-555</p>
 			<p>Fax: 9999-111-555</p>
-			<p>Email: <a href="mailto:companyname@domain.com">companyname@domain.com</a></p>
-			<p>Skype: Skype name</p>
-			<p>Twitter: Twitter name</p>
+			<p>Email: <a href="mailto:companyname@domain.com">tussify.com</a></p>
+			<p></p>
+			<p></p>
 			
             <div class="space"></div>
            
