--- a/app/views/quiz/end.html.erb
+++ b/app/views/quiz/end.html.erb
@@ -7,7 +7,7 @@
 
 <%= form_tag({:controller => "quiz", :action => "index"}, :method => "get") do %>
   <div class="center">
-	 <%= submit_tag("Take another quiz", :class => "submit") %>
+	 <%= submit_tag("Take another quiz", :class => "btn-error") %>
   </div>
 <% end %>
 
