--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -7,7 +7,7 @@
   <p class="center"><%= select_tag(:number, options_for_select((1..10).map {|x| [x, x]}), :id => "count") %> <br /></p>
   
   <div class="center">
-	 <%= submit_tag "Start!", :class => "submit"%>
+	 <%= submit_tag "Start!", :class => "btn-info"%>
   </div>
 <% end %>
 
