--- a/app/views/quiz/question.html.erb
+++ b/app/views/quiz/question.html.erb
@@ -11,7 +11,7 @@
   <% end %>
   
   <div class="center">
-	 <%= submit_tag("Continue", :class => "submit") %>
+	 <%= submit_tag("Continue", :class => "btn-info") %>
   </div>
 <% end %>
 
