--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 
 <%= stylesheet_link_tag "style.css" %>
 <%= stylesheet_link_tag "jquery.fancybox-1.3.1" %>
+<%= stylesheet_link_tag "questions.css.scss" %>
+<%= stylesheet_link_tag "choices.css.scss" %>
 <%= javascript_include_tag "jquery-1.4.2.min" %>
 <%= javascript_include_tag "jquery.fancybox-1.3.1.pack" %>
 <%= javascript_include_tag "ajax" %>
