--- a/app/views/quiz/answer.html.erb
+++ b/app/views/quiz/answer.html.erb
@@ -1,3 +1,7 @@
+<head>
+<%= stylesheet_link_tag "bootstrap" %>
+</head>
+
 <h1>Question <%= @current + 1 %> of <%= @total %></h1>
 <p id="question"><%= @question.text %></p>
 
@@ -25,7 +29,7 @@
 
 <%= form_tag({:controller => "quiz", :action => "question"}) do %>
   <div class="center">
-	 <%= submit_tag("Continue", :class => "submit") %>
+	 <%= submit_tag("Continue", :class => "btn-info") %>
   </div>
 <% end %>
 
